fix(css): fix table align center

--- a/src/components/tables/KeyTable.less
+++ b/src/components/tables/KeyTable.less
@@ -2,3 +2,7 @@
 .key-table .base-table__column-head {
   text-align: left;
 }
+
+.key-table .base-table__cell:nth-child(3) {
+  text-align: center;
+}
